# vrc-world-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vrc_world_crawler/: util.py
src/vrc_world_crawler/crawler/: crawler.py  fetcher.py
src/vrc_world_crawler/crawler/valueobject/: fetched_info.py
src/vrc_world_crawler/db/: favorite_world_db.py  model.py
tests/: test_util.py
tests/crawler/valueobject/: test_fetched_info.py
tests/db/: test_base.py  test_favorite_world_db.py  test_model.py
vrc_world_crawler/: util.py  vrc_world_crawler.py
vrc_world_crawler/crawler/: crawler.py  fetcher.py
vrc_world_crawler/crawler/valueobject/: fetched_info.py
vrc_world_crawler/db/: base.py  favorite_world_db.py  model.py
