[project]
name = "vrc-world-crawler"
version = "0.1.0"
description = "vrc world crawler"
authors = [
    {name = "shift"}
]
dependencies = [
    "coverage>=7.8.2",
    "freezegun>=1.5.2",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mock>=5.2.0",
    "orjson>=3.10.18",
    "pycodestyle>=2.13.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
line_length = 119
multi_line_output = 9

[tool.ruff]
exclude = [
    "__pycache__",
    ".coveragerc",
    ".git",
    ".venv",
    "venv",
]
line-length = 119

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F"]
ignore = ["F401", "F541", "F841"]
preview = true

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
unittest = "python -m unittest"
coverage_html = {chain = ["coverage run --source . -m unittest discover", "coverage html"]}
copy_to_run = "./copy_to_run.bat"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vrc_world_crawler"]
